<resources>

    <string name="com_not_updated_yet">暂未更新过</string>
    <string name="com_updated_at">上次更新于%1$s前</string>
    <string name="com_updated_just_now">刚刚更新</string>
    <string name="com_time_error">时间有问题</string>
    <string name="title_activity_base">BaseActivity</string>

    <!--公共-->
    <string name="ok">确认</string>
    <string name="cancel">取消</string>

    <!--首页-->
    <string name="app_name">星星点餐</string>
    <string name="guide_btn">立即体验</string>
    <string name="home_order">点菜</string>
    <string name="home_book">订座</string>
    <string name="home_grouppurchase">团购</string>
    <string name="home_take_out">外卖</string>

    <!-- 用户登录 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_by_phone">登录手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="forget_password_title">忘记密码?</string>
    <string name="forget_password">忘记密码</string>
    <string name="agin_exit">再次点击退出应用</string>
    <string name="please_input_your_phonenumber">请输入您的用户名</string>
    <string name="please_input_your_phonenumber_error">请输入正确的11位手机号码</string>
    <string name="please_input_your_password">请输入您的密码</string>
    <string name="please_input_your_password_error">请输入正确的6–20位密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="exit_login">退出登录</string>

    <string name="user_or_pwd_error">用户名或密码错误</string>

    <!-- 用户注册 -->
    <string name="mobile">手机号</string>
    <string name="pwd">密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_confirm_pwd">请输入确认密码</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>

    <!-- 用户修改密码 -->
    <string name="modify_pwd">修改密码</string>
    <string name="new_pwd">新密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="update_success">修改密码成功</string>
    <string name="update_fail">修改密码失败</string>

    <!--用户管理-->
    <string name="user_fast_pay">快捷支付</string>
    <string name="user_title">我的</string>
    <string name="user_bookup_manager">订座管理</string>
    <string name="user_orderfood_manager">点菜管理</string>
    <string name="user_takeout_manager">外卖管理</string>
    <string name="user_oto_manager">团购管理</string>
    <string name="user_fast_pay_record">快捷支付记录</string>
    <string name="user_pay_record">订餐支付记录</string>
    <string name="user_refund_manager">退款管理</string>
    <string name="user_my_voucher">我的代金券</string>
    <string name="user_address_manage">外卖地址管理</string>
    <string name="user_msg_manager">消息中心</string>
    <string name="user_public_phone">客服电话</string>

    <!-- 设置 -->
    <string name="settings">设置</string>
    <string name="user_guide">使用帮助</string>
    <string name="idea_feedback">意见反馈</string>
    <string name="check_version">版本检测</string>
    <string name="about_us">关于我们</string>

    <!--团购-->
    <string name="not_oto_info">暂时没有团购信息哦!</string>

    <!--点菜-->
    <string name="selete_finish">选好了</string>
    <string name="confirm_order">确认订单</string>
    <string name="order_confirm">点菜订单确认</string>
    <string name="order_detail">点菜清单</string>
    <string name="update_menu">修改菜单</string>
    <string name="modify">修改</string>

    <string name="drawcash_record">提现记录</string>
    <string name="withdraw_cash">提现</string>

    <!--网络-->正在加载中...
    <string name="request_progress_info">正在加载中...</string>
    <string name="network_error">网络异常</string>
</resources>
