<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/page_bg"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/item_label_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <View style="@style/seperator" />

            <com.yjx.order.ui.component.LabelEditText
                style="@style/item_label_edit_style"
                android:id="@+id/mobile"
                app:labelText="@string/mobile"
                app:centerHint="@string/input_mobile"/>

            <View style="@style/seperator"
                android:layout_marginLeft="@dimen/middle_line_left_space"/>

            <com.yjx.order.ui.component.LabelEditText
                style="@style/item_label_edit_style"
                android:id="@+id/pwd"
                app:labelText="@string/pwd"
                app:centerHint="@string/input_pwd"/>

            <View style="@style/seperator"
                android:layout_marginLeft="@dimen/middle_line_left_space"/>

            <com.yjx.order.ui.component.LabelEditText
                style="@style/item_label_edit_style"
                android:id="@+id/confirm_pwd"
                app:labelText="@string/confirm_pwd"
                app:centerHint="@string/input_confirm_pwd"/>

        </LinearLayout>

        <View style="@style/seperator"
            android:layout_marginBottom="@dimen/item_label_space"/>

        <Button
            style="@style/button_red_style"
            android:id="@+id/register"
            android:text="@string/register"/>
    </LinearLayout>

</ScrollView>