<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">
    <TextView
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/order_detail"
        android:textSize="20dp"
        android:textColor="@color/font_gray"
        android:gravity="center"/>

    <Button
        android:id="@+id/ib_search"
        android:layout_width="120dp"
        android:layout_height="@dimen/dimen_50"
        android:text="@string/update_menu"
        android:textColor="@color/nav_bg"
        android:background="@drawable/btn_white_selector"
        android:layout_gravity="right"
        android:visibility="gone"/>
    </LinearLayout>

    <View style="@style/seperator"/>

    <ListView
        android:id="@+id/lvDish"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:listSelector="#00000000"
        android:scrollbars="none"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_e6e7e9"
        android:gravity="center">

        <View style="@style/seperator"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="共计5菜，菜单金额：¥200.00"
            android:textSize="13dp"
            android:textColor="@color/font_black"
            android:gravity="center"
            android:background="@color/white"/>

        <View style="@style/seperator"/>

        <Button
            android:id="@+id/btn_confirm_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_88"
            android:text="@string/confirm_order"
            android:textSize="@dimen/font_size_large"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg_light_red"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

    </LinearLayout>
</RelativeLayout>
